tests/integration2/galley/validation/testdata/config-v1alpha2-apikey-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: apikey
metadata:
  name: valid-apikey
spec:
  api: api.service | ""
  api_version: api.version | ""
  api_operation : api.operation
  api_key : request.api_key
  timestamp : request.time
