tests/integration2/galley/validation/testdata/config-v1alpha2-authorization-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: authorization
metadata:
  name: valid-authorization
spec:
  subject:
    user: request.auth.principal | ""
    groups: request.auth.principal | ""
    properties:
      service: source.service | ""
      namespace: source.namespace | ""
  action:
    namespace: destination.namespace | ""
    service: destination.service | ""
    method: request.method | ""
    path: request.path | ""
    properties:
      version: request.headers["version"] | ""
