tests/integration2/galley/validation/testdata/config-v1alpha2-checknothing-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: checknothing
metadata:
  name: valid-check-nothing
spec:
  badField: foo
