tests/integration2/galley/validation/testdata/config-v1alpha2-denier-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: denier
metadata:
  name: invalid-denyall
spec:
  badField: foo
