tests/integration2/galley/validation/testdata/config-v1alpha2-HTTPAPISpecBinding-valid.yaml
apiVersion: config.istio.io/v1alpha2
kind: HTTPAPISpecBinding
metadata:
  name: valid-http-api-spec-binding
spec:
  apiSpecs:
  - name: productpage
    namespace: default
  services:
  - name: productpage
    namespace: default
