tests/integration2/galley/validation/testdata/config-v1alpha2-kubernetesenv-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: kubernetesenv
metadata:
  name: valid-kubernetesenv
spec:
