tests/integration2/galley/validation/testdata/config-v1alpha2-metric-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: metric
metadata:
  name: invalid-metric
spec:
  badField: foo
