tests/integration2/galley/validation/testdata/config-v1alpha2-prometheus-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: prometheus
metadata:
  name: invalid-prometheus
spec:
  badField: foo
