tests/integration2/galley/validation/testdata/config-v1alpha2-QuotaSpec-invalid.yaml
apiVersion: config.istio.io/v1alpha2
kind: QuotaSpec
metadata:
  name: invalid-quota-spec
spec:
