tests/integration2/galley/validation/testdata/config-v1alpha2-reportnothing-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: reportnothing
metadata:
  name: invalid-reportnothing
spec:
  badField: foo
