tests/integration2/galley/validation/testdata/config-v1alpha2-rule-invalid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: denier
metadata:
  name: handler-for-invalid-rule
spec:
  status:
    code: 7
    message: Not allowed
---
apiVersion: "config.istio.io/v1alpha2"
kind: checknothing
metadata:
  name: instance-for-invalid-rule
spec:
---
apiVersion: "config.istio.io/v1alpha2"
kind: rule
metadata:
  name: invalid-rule
spec:
  badField: foo
  match: request.headers["clnt"] == "abc"
  actions:
  - handler: handler-for-invalid-rule.denier
    instances:
    - instance-for-invalid-rule.checknothing
