tests/integration2/galley/validation/testdata/config-v1alpha2-stdio-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: stdio
metadata:
  name: valid-stdio
spec:
  outputAsJson: true
