tests/integration2/galley/validation/testdata/config-v1alpha2-tracespan-valid.yaml
apiVersion: "config.istio.io/v1alpha2"
kind: tracespan
metadata:
  name: valid-tracespan
spec:
  traceId: request.headers["x-b3-traceid"]
  spanId: request.headers["x-b3-spanid"] | ""
  parentSpanId: request.headers["x-b3-parentspanid"] | ""
  spanName: request.path | "/"
  startTime: request.time
  endTime: response.time
  spanTags:
    http.method: request.method | ""
    http.status_code: response.code | 200
    http.url: request.path | ""
    request.size: request.size | 0
    response.size: response.size | 0
    source.ip: source.ip | ip("0.0.0.0")
    source.service: source.service | ""
    source.user: source.user | ""
    source.version: source.labels["version"] | source.labels["app.kubernetes.io/version"] | ""
