tests/integration2/galley/validation/testdata/networking-v1alpha3-DestinationRule-valid.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: valid-destination-rule
spec:
  host: c
  subsets:
    - name: v1
      labels:
        app.kubernetes.io/version: v1
    - name: v2
      labels:
        app.kubernetes.io/version: v2
